--- a/src/components/Sidebar/SidePanel.css
+++ b/src/components/Sidebar/SidePanel.css
@@ -1,6 +1,6 @@
 .side-panel {
   top: 0;
-  left: 0;
+  right: 0;
   width: 70%;
   height: 100%;
   z-index: 100;
@@ -8,7 +8,7 @@
   max-width: 400px;
   background-color: white;
   box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
-  transform: translateX(-100%);
+  transform: translateX(+100%);
   transition: transform 0.5s ease-out;
 }
 
