Implement images fetching from server

--- a/src/components/Gallery/Spiner.css
+++ b/src/components/Gallery/Spiner.css
@@ -1,6 +1,8 @@
 .gallery__spinner {
   display: inline-block;
   position: relative;
+  left: calc(50% - 32px);
+  top: calc(50% - 32px);
   width: 64px;
   height: 64px;
 }
