--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,7 +1,7 @@
 .gallery {
-  margin: 0 30px;
+  width: 95%;
   overflow: auto;
-  max-height: 80%;
+  height: 80%;
   position: fixed;
   border-radius: 10px;
   justify-content: center;
