--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -37,9 +37,23 @@
   padding: 0 1rem;
 }
 
-.navbar_navigation-items a {
-  color: white;
+.navbar_navigation-items button {
+  background-color: white;
+  color: black;
+  border: 3px solid #b7262c;
+  border-radius: 8px;
+  padding: 12px 32px;
+  text-align: center;
   text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+}
+
+.navbar_navigation-items button:hover {
+    background-color: #b7262c;
+    color: white;
 }
 
 @media(max-width: 768px) {
