--- a/src/components/UploadModal/UploadModal.css
+++ b/src/components/UploadModal/UploadModal.css
@@ -2,21 +2,69 @@
   top: 0;
   left: calc(50% - 200px);
   width: 400px;
-  height: 400px;
+  color: white;
+  height: 230px;
   z-index: 100;
   position: fixed;
   max-width: 400px;
+
   background-color: #757575;
   transform: translateY(-100%);
   transition: transform 0.5s ease-out;
+}
+.upload-modal h1 {
+  text-align: center;
+}
+
+.upload-form__element {
+  display: flex;
+  padding: 10px 0;
+  justify-content: space-between;
+}
+
+.upload-form__element input {
+  min-width: 240px;
+}
+
+.upload-modal__message {
+  display: none;
+  font-size: 1rem;
+  color: red;
+}
+
+.upload-modal__message.active{
+  display: inline-block;
+  font-size: 0.9rem;
+  color: #da5f5f;
+}
+
+.upload-form__button {
+  text-align: center;
+}
+
+.upload-form__button button {
+  background-color: white;
+  color: black;
+  border: 3px solid #4CAF50;
+  border-radius: 8px;
+  padding: 12px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+}
+
+.upload-form__button button:hover {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.upload-form {
+  margin: 0 30px;
 }
 
 .upload-modal.open {
   transform: translateY(0);
 }
-
-/*@media(min-width: 769px) {
-  .side-panel {
-    display: none;
-  }
-}*/
