--- a/src/components/UploadModal/UploadModal.css
+++ b/src/components/UploadModal/UploadModal.css
@@ -39,6 +39,12 @@
 }
 
 .upload-form__button {
+  display: none;
+  text-align: center;
+}
+
+.upload-form__button.active {
+  display: block;
   text-align: center;
 }
 
@@ -68,3 +74,43 @@
 .upload-modal.open {
   transform: translateY(0);
 }
+
+.upload-modal__spinner {
+  display: none;
+  position: relative;
+  left: calc(50% - 32px);
+  top: calc(50% - 32px);
+  width: 64px;
+  height: 64px;
+}
+
+.upload-modal__spinner.active {
+  display: inline-block;
+}
+.upload-modal__spinner div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  animation: upload-modal__spinner 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.upload-modal__spinner div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes upload-modal__spinner {
+  0% {
+    top: 28px;
+    left: 28px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 58px;
+    height: 58px;
+    opacity: 0;
+  }
+}
+
